--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,6 @@
 
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Joann Vuong <130@holbertonschool.com>
+Kolton Rhodes <gamerlife467@gmail.com>
+Carlos Alarcon <carlos3alarcon@gmail.com> 
